[gd_scene load_steps=2 format=3 uid="uid://cssinv8uuvpp4"]

[ext_resource type="Script" path="res://src/Scripts/Bullet/BulletComponent.gd" id="1_etomp"]

[node name="BaseBullet" type="Node2D"]

[node name="BulletBody" type="AnimatedSprite2D" parent="."]

[node name="BulletComponent" type="Node" parent="." node_paths=PackedStringArray("ACTOR")]
script = ExtResource("1_etomp")
ACTOR = NodePath("..")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="Despawn_Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="body_entered" from="Area2D" to="BulletComponent" method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Despawn_Timer" to="BulletComponent" method="_on_timer_timeout"]
